--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,4 +17,12 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+input {
+  @apply h-10 border-2 px-2 rounded;
+}
+
+.button {
+  @apply bg-blue-600 text-white font-semibold h-10 rounded;
 }
